# SimpleHash

./: CMakeLists.txt  README.md  Spec.md
Include/: SimpleHash.h
SampleData/: sample1.txt
Source/: SimpleHash.cpp  main.cpp
